--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "react-router-dom": "^7.6.2",
     "zustand": "^5.0.5"
   },
+  "resolutions": {
+    "rollup": "npm:@rollup/wasm-node"
+  },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
